# nocap

./: README.md  pyproject.toml
lil_nocap/: __init__.py  __main.py__  nocap.py
nocap/: __init__.py  main.py
notebooks/: dask debug-Copy1.ipynb  nocap-interactive.ipynb
