[tool.poetry]
name = "lil-nocap"
version = "0.2.2"
description = "A package for downloading bulk files from courtlistener"
authors = ["sabzo <sabelo@sabelo.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
